Change confetti and other features added

--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
 
         <div class="result" id="result" aria-live="polite"></div>
 
-        <details class="hint">
+        <!-- <details class="hint">
           <summary> Mini-Hinweis</summary>
           <p>
             Tipp: In einem Hubble-Diagramm entspricht die <b>Steigung</b> der Ausgleichsgeraden ungefähr H0.
           </p>
-        </details>
+        </details> -->
       </form>
     </section>
 
